Поправил обработчик форм, добавил actions.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="page-loading active">
             <div class="page-loading-inner">
                 <div class="page-spinner"></div>
-                <span>Loading...</span>
+                <span>Секунду...</span>
             </div>
         </div>
         <!-- Navbar -->
@@ -471,7 +471,7 @@
                             <div class="ratio ratio-1x1 rounded-4 overflow-hidden">
                                 <section id="map" class="d-flex align-items-center justify-content-center mb-5">
                                     <script type="text/javascript" charset="utf-8" async
-                                        src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ac7f4e2c3a68b601ab4136bf928a4c785f721c7b31af56a6adc95a83d0e027538&amp;width=600&amp;height=630&amp;lang=ru_RU&amp;scroll=true">
+                                        src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ac7f4e2c3a68b601ab4136bf928a4c785f721c7b31af56a6adc95a83d0e027538&amp;width=600&amp;height=697&amp;lang=ru_RU&amp;scroll=true">
                                     </script>
                                 </section>
                             </div>
