Убрал index.html

--- a/index.html
+++ b/index.html
@@ -34,20 +34,20 @@
                        <h5 class="fw-bold m-0 text-white">Artificial</h5>
                        <small class="text-white-50">Intelligence</small>
                     </div>
-                    <a class="stretched-link" href="index.html"></a>
+                    <a class="stretched-link" href="/"></a>
                 </div>
 
                 <button class="navbar-toggler border-0 shadow-none p-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebar" aria-controls="sidebar"><i class="ri-menu-3-line ri-lg"></i></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mx-auto gap-4">
                         <!-- <li class="nav-item">
-                            <a class="nav-link active py-4" href="index.html"><i class="ri-apps-2-line"></i>Главная</a>
+                            <a class="nav-link active py-4" href="/"><i class="ri-apps-2-line"></i>Главная</a>
                         </li> -->
-                        <li class="nav-item"><a class="nav-link py-4" href="index.html#homepage">Главная</a></li>
-                        <li class="nav-item"><a class="nav-link py-4" href="index.html#about">О нас</a></li>
-                        <li class="nav-item"><a class="nav-link py-4" href="index.html#services">Услуги</a></li>
-                        <li class="nav-item"><a class="nav-link py-4" href="index.html#portfolio">Портфолио</a></li>
-                        <li class="nav-item"><a class="nav-link py-4" href="index.html#contact">Связаться с нами</a></li>
+                        <li class="nav-item"><a class="nav-link py-4" href="#homepage">Главная</a></li>
+                        <li class="nav-item"><a class="nav-link py-4" href="#about">О нас</a></li>
+                        <li class="nav-item"><a class="nav-link py-4" href="#services">Услуги</a></li>
+                        <li class="nav-item"><a class="nav-link py-4" href="#portfolio">Портфолио</a></li>
+                        <li class="nav-item"><a class="nav-link py-4" href="#contact">Связаться с нами</a></li>
                     </ul>
                     <a href="#" class="btn btn-light ms-2 transition-3d-hover" data-bs-toggle="modal" data-bs-target="#callMeModal">
                         <i class="ri-phone-fill me-2"></i>Позвоните мне
@@ -70,8 +70,8 @@
                                 <p class="lead text-white-50">Автоматизируем бизнес-процессы, внедряем ИИ технологии и создаем современные веб-решения для развития вашей компании</p>
 
                                 <div class="d-flex align-items-center gap-3 mt-5">
-                                    <a href="index.html#about" class="btn btn-light btn-lg">Подробнее</a>
-                                    <a href="index.html#services" class="btn btn-outline-light btn-lg">Посмотреть услуги</a>
+                                    <a href="#about" class="btn btn-light btn-lg">Подробнее</a>
+                                    <a href="#services" class="btn btn-outline-light btn-lg">Посмотреть услуги</a>
                                 </div>
                             </div>
                         </div>
@@ -94,7 +94,7 @@
                                 Мы помогаем компаниям внедрять современные технологии и автоматизировать процессы. Наша команда профессионалов создает
                                 индивидуальные решения, которые повышают эффективность бизнеса и открывают новые возможности для роста.
                             </p>
-                            <a href="index.html#portfolio" class="btn btn-primary btn-lg mt-4">Подробнее</a>
+                            <a href="#portfolio" class="btn btn-primary btn-lg mt-4">Подробнее</a>
                         </div>
                         <div class="col-lg-6 col-12">
                             <div class="row g-4 g">
@@ -628,10 +628,10 @@
                     <div class="row align-items-center justify-content-between py-4">
                         <div class="col-auto">
                             <div class="d-flex align-items-center gap-5 footer-links">
-                                <a href="index.html" class="link-secondary">ГЛАВНАЯ</a>
-                                <a href="index.html#about" class="link-secondary">О НАС</a>
+                                <a href="/" class="link-secondary">ГЛАВНАЯ</a>
+                                <a href="#about" class="link-secondary">О НАС</a>
                                 <a href="#" onclick="return false;" class="link-secondary">БЛОГ</a>
-                                <a href="index.html#contact" class="link-secondary">КОНТАКТЫ</a>
+                                <a href="#contact" class="link-secondary">КОНТАКТЫ</a>
                             </div>
                         </div>
                         <div class="col-auto d-flex gap-5">
@@ -653,7 +653,7 @@
                     <div class="lh-1">
                         <h5 class="fw-bold m-0">ИИ</h5>
                     </div>
-                    <a class="stretched-link" href="index.html"></a>
+                    <a class="stretched-link" href="/"></a>
                 </div>
                 <a href="#" class="link-light" data-bs-dismiss="offcanvas" aria-label="Close"><i
                         class="ri-close-line ri-lg"></i></a>
