Поправил обработчики форм и index.html

--- a/index.html
+++ b/index.html
@@ -450,9 +450,9 @@
                                             <div class="text-white pt-3">
                                                 <h5 class="fw-bold">Номера телефонов</h5>
                                                 <p class="mb-0">
-                                                    +7 (495) 123-45-67
-                                                    <br>
                                                     +7 (953) 010-53-35
+                                                    <br>
+                                                    +7 (999) 199-12-59
                                                 </p>
                                             </div>
                                         </div>
@@ -588,7 +588,7 @@
                                     </div>
                                 </div>
                                 <div>
-                                    <h5 class="fw-bold pb-3">Useful Information</h5>
+                                    <h5 class="fw-bold pb-3">Полезная информация</h5>
                                     <ul class="list-unstyled d-grid gap-2">
                                         <li><a href="#" onclick="return false;" class="link-secondary">Cookies Policy</a></li>
                                         <li><a href="#" onclick="return false;" class="link-secondary">Terms & Services</a></li>
