Убрал белую полосу в мобильной версии

--- a/index.html
+++ b/index.html
@@ -265,6 +265,7 @@
         </div>
 
         <div id="portfolio" class="py-0">
+            <!-- Portfolio -->
             <div class="bg-black py-5">
                 <div class="container py-5">
                     <div class="row justify-content-center mb-5">
@@ -463,7 +464,8 @@
                     </div>
                 </div>
             </div>
-            <!-- Lat s talk -->
+
+            <!-- Let's Talk -->
             <div class="py-5">
                 <div class="container py-4">
                     <div class="row align-items-center g-4 g-md-5">
@@ -511,134 +513,144 @@
                     </div>
                 </div>
             </div>
+        </div>
 
-            <!-- footer -->
-            <footer class="footer bg-light">
-                <!-- footer top -->
-                <div class="footer-top py-5 bg-white">
-                    <div class="container py-4">
-                        <div class="row g-4 g-md-5">
-                            <div class="col-lg-3 col-md-6 col-12">
-                                <div class="mb-5">
-                                    <h5 class="fw-bold pb-3">О компании</h5>
-                                    <p class="text-muted">
-                                        Online Dynamics - инновационная компания, специализирующаяся на разработке и внедрении решений на базе искусственного
-                                        интеллекта. Мы помогаем бизнесу развиваться с помощью современных ИИ технологий, автоматизации процессов и
-                                        интеллектуальных систем.
-                                    </p>
-                                </div>
-                                <div>
-                                    <h5 class="fw-bold pb-3">Социальные сети</h5>
-                                    <div class="d-flex align-items-center gap-4">
-                                        <a href="#" onclick="return false;" class="link-secondary"><i class="ri-telegram-fill ri-lg"></i></a>
-                                        <a href="#" onclick="return false;" class="link-secondary"><i class="ri-vk-fill ri-lg"></i></a>
-                                        <a href="#" onclick="return false;" class="link-secondary"><i class="ri-instagram-fill ri-lg"></i></a>
-                                        <a href="#" onclick="return false;" class="link-secondary"><i class="ri-linkedin-box-fill ri-lg"></i></a>
-                                        <a href="#" onclick="return false;" class="link-secondary"><i class="ri-youtube-fill ri-lg"></i></a>
-                                        <a href="#" onclick="return false;" class="link-secondary"><i class="ri-pinterest-fill ri-lg"></i></a>
-                                    </div>
-                                </div>
+        <!-- footer -->
+        <footer class="footer bg-light">
+            <!-- footer top -->
+            <div class="footer-top py-5 bg-white">
+                <div class="container py-4">
+                    <div class="row g-4 g-md-5">
+                        <div class="col-lg-3 col-md-6 col-12">
+                            <div class="mb-5">
+                                <h5 class="fw-bold pb-3">О компании</h5>
+                                <p class="text-muted">
+                                    Online Dynamics - инновационная компания, специализирующаяся на разработке и внедрении
+                                    решений на базе искусственного
+                                    интеллекта. Мы помогаем бизнесу развиваться с помощью современных ИИ технологий,
+                                    автоматизации процессов и
+                                    интеллектуальных систем.
+                                </p>
                             </div>
-                            <div class="col-lg-3 col-md-6 col-12">
-                                <div class="mb-5">
-                                    <h5 class="fw-bold pb-3">Аккаунт</h5>
-                                    <ul class="list-unstyled d-grid gap-2">
-                                        <li><a href="#" onclick="return false;" class="link-secondary">Мой аккаунт</a></li>
-                                        <li><a href="#" onclick="return false;" class="link-secondary">Мой кабинет</a></li>
-                                        <li><a href="#" onclick="return false;" class="link-secondary">Моя корзина</a></li>
-                                        <li><a href="#" onclick="return false;" class="link-secondary">Войти</a></li>
-                                    </ul>
-                                </div>
-                                <div>
-                                    <h5 class="fw-bold pb-3">Быстрые ссылки</h5>
-                                    <ul class="list-unstyled d-grid gap-2">
-                                        <li><a href="#" onclick="return false;" class="link-secondary">Организационная команда</a></li>
-                                        <li><a href="#" onclick="return false;" class="link-secondary">Для прессы</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="col-lg-3 col-md-6 col-12">
-                                <div class="mb-5">
-                                    <h5 class="fw-bold pb-3">Меню сайта</h5>
-                                    <ul class="list-unstyled d-grid gap-2">
-                                        <li><a href="#" onclick="return false;" class="link-secondary">Услуги</a></li>
-                                        <li><a href="#" onclick="return false;" class="link-secondary">Наша комманда</a></li>
-                                        <li><a href="#" onclick="return false;" class="link-secondary">Тарифные планы</a></li>
-                                        <li><a href="#" onclick="return false;" class="link-secondary">Мы нанимаем</a></li>
-                                    </ul>
-                                </div>
-                                <div>
-                                    <h5 class="fw-bold pb-3">Лучшие инструкторы</h5>
-                                    <ul class="list-unstyled d-grid gap-2">
-                                        <li><a href="#" onclick="return false;" class="link-secondary">Иванов Роман</a></li>
-                                        <li><a href="#" onclick="return false;" class="link-secondary">Дмитриева Светлана</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="col-lg-3 col-md-6 col-12">
-                                <div class="mb-5">
-                                    <h5 class="fw-bold pb-3">Связаться с нами</h5>
-                                    <div class="mb-4">
-                                        <p class="text-secondary-emphasis mb-0">Телефон: +7 (495) 123-45-67</p>
-                                        <p class="text-secondary-emphasis mb-0">Мессенджеры: +7 (953) 010-53-35</p>
-                                    </div>
-                                    <div>
-                                        <p class="text-secondary-emphasis mb-0">Нужна помощь или есть вопросы?</p>
-                                        <p class="text-secondary-emphasis mb-0">Напишите: info@online-dynamics.ru</p>
-                                    </div>
-                                </div>
-                                <div>
-                                    <h5 class="fw-bold pb-3">Полезная информация</h5>
-                                    <ul class="list-unstyled d-grid gap-2">
-                                        <li><a href="#" onclick="return false;" class="link-secondary">Cookies Policy</a></li>
-                                        <li><a href="#" onclick="return false;" class="link-secondary">Terms & Services</a></li>
-                                    </ul>
+                            <div>
+                                <h5 class="fw-bold pb-3">Социальные сети</h5>
+                                <div class="d-flex align-items-center gap-4">
+                                    <a href="#" onclick="return false;" class="link-secondary"><i
+                                            class="ri-telegram-fill ri-lg"></i></a>
+                                    <a href="#" onclick="return false;" class="link-secondary"><i
+                                            class="ri-vk-fill ri-lg"></i></a>
+                                    <a href="#" onclick="return false;" class="link-secondary"><i
+                                            class="ri-instagram-fill ri-lg"></i></a>
+                                    <a href="#" onclick="return false;" class="link-secondary"><i
+                                            class="ri-linkedin-box-fill ri-lg"></i></a>
+                                    <a href="#" onclick="return false;" class="link-secondary"><i
+                                            class="ri-youtube-fill ri-lg"></i></a>
+                                    <a href="#" onclick="return false;" class="link-secondary"><i
+                                            class="ri-pinterest-fill ri-lg"></i></a>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </div>
-                <!-- footer end -->
-            </footer>
-
-            <div class="footer bg-dark py-4">
-                <div class="container">
-                    <div class="row py-5">
-                        <div class="col-md-6 pe-5">
-                            <h3 class="fw-bold text-white">Будущее вашего бизнеса начинается с разговора о технологиях</h3>
-                            <p class="fs-5 text-warning pt-1 pt-3 mb-0">info@online-dynamics.ru</p>
+                        <div class="col-lg-3 col-md-6 col-12">
+                            <div class="mb-5">
+                                <h5 class="fw-bold pb-3">Аккаунт</h5>
+                                <ul class="list-unstyled d-grid gap-2">
+                                    <li><a href="#" onclick="return false;" class="link-secondary">Мой аккаунт</a></li>
+                                    <li><a href="#" onclick="return false;" class="link-secondary">Мой кабинет</a></li>
+                                    <li><a href="#" onclick="return false;" class="link-secondary">Моя корзина</a></li>
+                                    <li><a href="#" onclick="return false;" class="link-secondary">Войти</a></li>
+                                </ul>
+                            </div>
+                            <div>
+                                <h5 class="fw-bold pb-3">Быстрые ссылки</h5>
+                                <ul class="list-unstyled d-grid gap-2">
+                                    <li><a href="#" onclick="return false;" class="link-secondary">Организационная команда</a>
+                                    </li>
+                                    <li><a href="#" onclick="return false;" class="link-secondary">Для прессы</a></li>
+                                </ul>
+                            </div>
                         </div>
-                        <div class="col-md-6 col-12">
-                            <div class="row gx-4">
-                                <div class="col-6">
-                                    <h6 class="fw-bold text-white">Свяжитесь с нами</h6>
-                                    <p class="text-white-50">Обсудим как ИИ технологии могут трансформировать ваш бизнес уже сегодня.</p>
+                        <div class="col-lg-3 col-md-6 col-12">
+                            <div class="mb-5">
+                                <h5 class="fw-bold pb-3">Меню сайта</h5>
+                                <ul class="list-unstyled d-grid gap-2">
+                                    <li><a href="#" onclick="return false;" class="link-secondary">Услуги</a></li>
+                                    <li><a href="#" onclick="return false;" class="link-secondary">Наша комманда</a></li>
+                                    <li><a href="#" onclick="return false;" class="link-secondary">Тарифные планы</a></li>
+                                    <li><a href="#" onclick="return false;" class="link-secondary">Мы нанимаем</a></li>
+                                </ul>
+                            </div>
+                            <div>
+                                <h5 class="fw-bold pb-3">Лучшие инструкторы</h5>
+                                <ul class="list-unstyled d-grid gap-2">
+                                    <li><a href="#" onclick="return false;" class="link-secondary">Иванов Роман</a></li>
+                                    <li><a href="#" onclick="return false;" class="link-secondary">Дмитриева Светлана</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6 col-12">
+                            <div class="mb-5">
+                                <h5 class="fw-bold pb-3">Связаться с нами</h5>
+                                <div class="mb-4">
+                                    <p class="text-secondary-emphasis mb-0">Телефон: +7 (495) 123-45-67</p>
+                                    <p class="text-secondary-emphasis mb-0">Мессенджеры: +7 (953) 010-53-35</p>
                                 </div>
-                                <div class="col-6">
-                                    <h6 class="fw-bold text-white">Мы рядом</h6>
-                                    <p class="text-white-50">Работаем по всей России, головной офис в Москве</p>
+                                <div>
+                                    <p class="text-secondary-emphasis mb-0">Нужна помощь или есть вопросы?</p>
+                                    <p class="text-secondary-emphasis mb-0">Напишите: info@online-dynamics.ru</p>
                                 </div>
+                            </div>
+                            <div>
+                                <h5 class="fw-bold pb-3">Полезная информация</h5>
+                                <ul class="list-unstyled d-grid gap-2">
+                                    <li><a href="#" onclick="return false;" class="link-secondary">Cookies Policy</a></li>
+                                    <li><a href="#" onclick="return false;" class="link-secondary">Terms & Services</a></li>
+                                </ul>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="bg-black py-4">
-                <div class="container">
-                    <div class="row align-items-center justify-content-between py-4">
-                        <div class="col-auto">
-                            <div class="d-flex align-items-center gap-5 footer-links">
-                                <a href="/" class="link-secondary">ГЛАВНАЯ</a>
-                                <a href="#about" class="link-secondary">О НАС</a>
-                                <a href="#" onclick="return false;" class="link-secondary">БЛОГ</a>
-                                <a href="#contact" class="link-secondary">КОНТАКТЫ</a>
+            <!-- footer end -->
+        </footer>
+        
+        <div class="footer bg-dark py-4">
+            <div class="container">
+                <div class="row py-5">
+                    <div class="col-md-6 pe-5">
+                        <h3 class="fw-bold text-white">Будущее вашего бизнеса начинается с разговора о технологиях</h3>
+                        <p class="fs-5 text-warning pt-1 pt-3 mb-0">info@online-dynamics.ru</p>
+                    </div>
+                    <div class="col-md-6 col-12">
+                        <div class="row gx-4">
+                            <div class="col-6">
+                                <h6 class="fw-bold text-white">Свяжитесь с нами</h6>
+                                <p class="text-white-50">Обсудим как ИИ технологии могут трансформировать ваш бизнес уже
+                                    сегодня.</p>
+                            </div>
+                            <div class="col-6">
+                                <h6 class="fw-bold text-white">Мы рядом</h6>
+                                <p class="text-white-50">Работаем по всей России, головной офис в Москве</p>
                             </div>
                         </div>
-                        <div class="col-auto d-flex gap-5">
-                            <p class="text-center m-0 text-white-50">
-                                Copyright © <a href="https://online-dynamics.ru" class="text-white">Online Dynamics</a> 2020
-                            </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="bg-black py-4">
+            <div class="container">
+                <div class="row align-items-center justify-content-between py-4">
+                    <div class="col-auto">
+                        <div class="d-flex align-items-center gap-5 footer-links">
+                            <a href="/" class="link-secondary">ГЛАВНАЯ</a>
+                            <a href="#about" class="link-secondary">О НАС</a>
+                            <a href="#" onclick="return false;" class="link-secondary">БЛОГ</a>
+                            <a href="#contact" class="link-secondary">КОНТАКТЫ</a>
                         </div>
+                    </div>
+                    <div class="col-auto d-flex gap-5">
+                        <p class="text-center m-0 text-white-50">
+                            Copyright © <a href="https://online-dynamics.ru" class="text-white">Online Dynamics</a> 2020
+                        </p>
                     </div>
                 </div>
             </div>
