Добавил кнопку позвонить

--- a/index.html
+++ b/index.html
@@ -694,11 +694,13 @@
                             <a class="nav-link py-4" href="#contact" onclick="closeOffcanvas()">Контакты</a>
                         </li>
                     </ul>
+                    <div class="text-center">
+                        <a href="tel:+79530105335" class="btn btn-danger w-50 btn-lg mt-3">
+                            <i class="ri-phone-fill me-2"></i>Позвонить
+                        </a>
+                    </div>
                 </div>
             </div>
-
-
-
         </div>
 
         <!-- Call Me Modal -->
