Поправил меню сайта

--- a/index.html
+++ b/index.html
@@ -665,7 +665,7 @@
                 <div class="position-relative d-flex align-items-center gap-2 site-brand">
                     <i class="ri-funds-line fs-2 lh-1 text-primary"></i>
                     <div class="lh-1">
-                        <h5 class="fw-bold m-0">ИИ</h5>
+                        <h5 class="fw-bold m-0">Меню сайта</h5>
                     </div>
                     <a class="stretched-link" href="/"></a>
                 </div>
