Добавил пометку обязательных полей

--- a/index.html
+++ b/index.html
@@ -485,13 +485,13 @@
                             <h2 class="fw-bolder pb-4">Отправьте нам сообщение</h2>
                             <form id="contactForm">
                                 <div class="mb-4">
-                                    <label for="name" class="form-label">ФИО</label>
+                                    <label for="name" class="form-label">ФИО *</label>
                                     <input type="text" class="form-control bg-transparent rounded-3" id="name" name="name" required
                                         placeholder="Как к вам обращаться?">
                                 </div>
 
                                 <div class="mb-4">
-                                    <label for="contact" class="form-label">Почта или мессенджер</label>
+                                    <label for="contact" class="form-label">Почта или мессенджер *</label>
                                     <input type="text" class="form-control bg-transparent rounded-3" id="contact" name="contact" required
                                         placeholder="Для обратной связи">
                                 </div>
@@ -503,7 +503,7 @@
                                 </div>
 
                                 <div class="mb-4">
-                                    <label for="botCheck" class="form-label">Защита от ботов: <b>сколько будет 2 + 2?</b></label>
+                                    <label for="botCheck" class="form-label">Защита от ботов: <b>сколько будет 2 + 2? *</b></label>
                                     <input type="number" class="form-control bg-transparent rounded-3" id="botCheck" name="botCheck" required
                                         placeholder="Введите ответ">
                                 </div>
@@ -714,7 +714,7 @@
                     <div class="modal-body">
                         <form id="callMeForm">
                             <div class="mb-3">
-                                <label for="phoneNumber" class="form-label">Ваш номер телефона</label>
+                                <label for="phoneNumber" class="form-label">Ваш номер телефона *</label>
                                 <input type="tel" class="form-control" id="phoneNumber" placeholder="+7 (___) ___-__-__"
                                     required>
                             </div>
