Revert "Убрал в подвале "БЛОГ""
This reverts commit 60f8d027f26f7b8f34e3849fd7d847c810aa1a8d.

--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
                         <div class="d-flex align-items-center gap-5 footer-links">
                             <a href="/" class="link-secondary">ГЛАВНАЯ</a>
                             <a href="#about" class="link-secondary">О НАС</a>
-                            <!-- <a href="#" onclick="return false;" class="link-secondary">БЛОГ</a> -->
+                            <a href="#" onclick="return false;" class="link-secondary">БЛОГ</a>
                             <a href="#contact" class="link-secondary">КОНТАКТЫ</a>
                         </div>
                     </div>
